- Changed failed link messages to provide more info to +A opers
- Changed cmode +c to block all control codes (except CTCP and ISO-2022)
- Changed RPL_TIME to include raw timestamp
- Changed ident handling to ignore encrypted pidentd responses
- Changed WATCH to apply flood penalties to repeat list requests
- Changed failed oper attempt notices to be more useful
- Added oper access flags for umodes ydb
- Added string probability calculation to RWHO
- Added automatic rejection of certain proxy types
- Added local storage system for klines, making UNKLINE work as expected
- Added CHECK NICK <nick> for opers to find sqlines/svsholds
- Upgraded zlib to 1.2.3
- Return an error on +R send to -r clients
- Fixed watch status update not being sent to local users on SVSNICK
- Fixed a bug when source is a server on INFO
- Fixed dcc allow's handling with quoted filenames

- Changed join rate throttling (cmode +j) implementation
    - uses a token bucket with debt to better handle distributed floods
    - default setting for -j is now 8:6 (was 8:4)
    - +j limits are now 2-20 joins, 1-60 seconds, ratio of 1/8 to 2/1

- Reworked memory accounting:
    stats z  shows short summary
    stats Z  shows detailed reports
    MEMTRACE define in config.h to debug memory leaks, adds to Z report

- Changed general connection reporting format to reduce ambiguity
  (affects stats L, trace, etc):
    servers:  name[host]
    clients:  nick!user@host
    unknown:  name([F]ident@host)
      where name is a nick or "<unnamed>"
      where F is:
        ?  identd lookup in progress
        +  valid identd response
        -  no identd response (ident is "unknown")

- Reworked m_message().  Behavior changes:
    - corrected error responses
    - error responses only sent for PRIVMSG, not NOTICE
    - #hostmask target support removed
    - no wildcard restrictions on $servermask target
    - $$servermask target is now identical to $servermask
    - U:lined clients talk through SILENCE